--- a/backend/.env
+++ b/backend/.env
@@ -1,2 +1,2 @@
 PORT=5000
-MONGO_URI=mongodb+srv://hasti:hasti982@nodemo.hidnn.mongodb.net/attendanceSystem?retryWrites=true&w=majority&appName=nodeMo
+MONGO_URI=mongodb+srv://<yourUsername>:<yourpass>@nodemo.hidnn.mongodb.net/attendanceSystem?retryWrites=true&w=majority&appName=nodeMo
